--- a/docs/registry-kit/index.yaml
+++ b/docs/registry-kit/index.yaml
@@ -19,3 +19,11 @@ contents:
         content:
           - type: text
             text: This section is currently being written.
+      - type: admonition
+        attrs:
+          type: seealso
+        content:
+          - type: paragraph
+            content:
+              - type: text
+                text: test!
