--- a/docs/extension-basics/index.yaml
+++ b/docs/extension-basics/index.yaml
@@ -1,3 +1,13 @@
 title: Extension basics
 media: []
 redirectFrom: []
+contents:
+  doc:
+    type: doc
+    content:
+      - type: paragraph
+        content:
+          - type: text
+            text: >-
+              A Paneron extension is an NPM package, where the file specified as
+              “entry” has a default export of certain format.
