--- a/docs/registry-kit/index.yaml
+++ b/docs/registry-kit/index.yaml
@@ -18,9 +18,13 @@ contents:
       - type: paragraph
         content:
           - type: text
-            text: >-
-              A common case of structured data is registers, as defined by the
-              ISO 19135-1 standard.
+            text: 'A common case of structured data is '
+          - type: text
+            marks:
+              - type: em
+            text: registers
+          - type: text
+            text: ', as defined by the ISO 19135-1 standard.'
       - type: paragraph
         content:
           - type: text
