migrate site settings

--- a/site-settings.yaml
+++ b/site-settings.yaml
@@ -1,3 +1,4 @@
 title: Paneron developer documentation
-urlPrefix: ''
+siteURLPrefix: ''
+docsURLPrefix: ''
 footerBannerLink: 'https://open.ribose.com/'
