--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "react-static-example-typescript",
   "private": true,
@@ -8,7 +7,9 @@
     "build": "react-static build",
     "bundle": "react-static bundle",
     "export": "react-static export",
-    "serve": "serve dist -p 3000 -s"
+    "serve": "serve dist -p 3000 -s",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "yarn lint --fix"
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
@@ -36,10 +37,15 @@
     "@types/react-hot-loader": "^4.1.0",
     "@types/styled-components": "^5.1.2",
     "@types/webpack-env": "^1.14.0",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "eslint": "^8.54.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "react-hot-loader": "^4.12.11",
     "react-static-plugin-file-watch-reload": "^1.0.4",
     "serve": "^11.1.0",
-    "typescript": "^3.9.6"
+    "typescript": "^5.3.2"
   }
 }
-      
