--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
   repository_dispatch:
   workflow_dispatch:
+    inputs:
+      SITE_ROOT:
+      BASE_PATH:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -49,7 +52,8 @@ jobs:
         run: yarn build
         env:
           NODE_OPTIONS: --openssl-legacy-provider
-          SITE_ROOT: ${{ vars.SITE_ROOT }}
+          SITE_ROOT: ${{ inputs.SITE_ROOT || vars.SITE_ROOT }}
+          BASE_PATH: ${{ inputs.BASE_PATH || vars.BASE_PATH }}
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
